@@ -1,3 +1,8 @@
+2009-02-05  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+
+	* matchbox/core/mb-wm-root-window.c:
+	  Set _NET_WM_PID on the hidden root window.
+
 2009-02-03  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
 
 	Release 0.2.15
